# wait-for-ci-checks

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  action.yml  entrypoint.sh  main.py  setup.cfg  tox.ini
wait_for_ci_checks/: __main__.py  main.py
workflows/: coverage.yml
