[metadata]
name = wait_for_ci_checks
version = 0.1.0
description = Wait for any checks to complete in your workflow.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/r0x0d/wait-for-ci-checks
author = Rodolfo Olivieri
author_email = rodolfo.olivieri3@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
source = wait_for_ci_checks
